# bb-kb-mods

./: .gitmodules  README.md  flake.nix  pyproject.toml
bbkm/: __init__.py  analyzer.py  hole_detector.py  main.py  modifications.py  stl_utils.py
keyboards/extra/: magsafe-example.stl
outputs/: 9900_bottom_case_magsafe_final.stl
prompts/: prompts.txt
